k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: moj-nginx
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
